--- a/content/tools/secure/my.css
+++ b/content/tools/secure/my.css
@@ -10,6 +10,9 @@
 	font-family: monospace;
 	display: none;
 }
+#file-password{
+	display: none;
+}
 .custom-upload{
 	display: inline-block;
 	cursor: pointer;
