--- a/template/default/css/main.css
+++ b/template/default/css/main.css
@@ -56,6 +56,7 @@ textarea{
 	background-color: #f5f5f5;
 	padding: 10px;
 	text-align: center;
+	margin-top: 20px;
 }
 
 ul{
@@ -67,4 +68,17 @@ li{
 }
 html{
 	word-wrap: break-word;
+}
+input{
+	color: #8c8c8c;
+	border-radius: 4px;
+    border: 1px solid #cdd2d4;
+    font-size: 1.3em;
+    padding: 5px;
+}
+input:hover{
+	border-color: #b6bbbf;
+}
+.left{
+	text-align: left;
 }
